--- a/templates/index.html
+++ b/templates/index.html
@@ -13,11 +13,11 @@
           <a href="#" class="btn btn-primary btn-lg">Get started</a>
         </div>
         <div class="col-md-6">
-          <img
+          <!-- <img
             src="https://res.cloudinary.com/teepublic/image/private/s--cH8bN-Q3--/t_Resized%20Artwork/c_fit,g_north_west,h_954,w_954/co_000000,e_outline:48/co_000000,e_outline:inner_fill:48/co_ffffff,e_outline:48/co_ffffff,e_outline:inner_fill:48/co_bbbbbb,e_outline:3:1000/c_mpad,g_center,h_1260,w_1260/b_rgb:eeeeee/c_limit,f_auto,h_630,q_90,w_630/v1542023362/production/designs/3487788_0.jpg"
             alt="Sarcasm Detector"
             class="img-fluid"
-          />
+          /> -->
         </div>
       </div>
     </div>
