--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,8 +26,10 @@
     <header>
       <!-- place navbar here -->
       <nav class="navbar navbar-expand-sm navbar-dark bg-292929">
-        <div class="container">
-          <a class="navbar-brand" href="/">SD</a>
+        <div class="container" style="margin-left: 20px;">
+          <a class="navbar-brand" href="#">
+            <img src="https://m.majorgeeks.com/index.php?ct=news&action=file&id=4366" alt="" width="30" height="24">
+          </a>
           <button
             class="navbar-toggler d-lg-none"
             type="button"
@@ -53,7 +55,7 @@
                 <a class="nav-link" href="/sarc_detector">Sarcasm Detector</a>
               </li>
             </ul>
-            <form class="d-flex my-2 my-lg-0">
+            <form class="d-flex my-2 my-lg-0" style="margin-right: 20px;">
               <input
                 class="form-control me-sm-2"
                 type="text"
