--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,6 +1,35 @@
 {% extends 'layout.html' %} {% block content %}
 <main>
   <h2>This is dashboard page</h2>
+  <form class="form-inline">
+    <label class="my-1 mr-2" for="inlineFormCustomSelectPref">Preference</label>
+    <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
+      <option selected>Choose...</option>
+      <option value="1">One</option>
+      <option value="2">Two</option>
+      <option value="3">Three</option>
+    </select>
+
+    <div class="custom-control custom-checkbox my-1 mr-sm-2">
+      <input
+        type="checkbox"
+        class="custom-control-input"
+        id="customControlInline"
+      />
+      <label class="custom-control-label" for="customControlInline"
+        >Remember my preference</label
+      >
+    </div>
+
+    <button type="submit" class="btn btn-primary my-1">Submit</button>
+  </form>
+
+  <select class="custom-select">
+    <option selected>Open this select menu</option>
+    <option value="1">One</option>
+    <option value="2">Two</option>
+    <option value="3">Three</option>
+  </select>
 </main>
 
 {% endblock %}
