--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,35 +1,25 @@
 {% extends 'layout.html' %} {% block content %}
 <main>
   <h2>This is dashboard page</h2>
-  <form class="form-inline">
-    <label class="my-1 mr-2" for="inlineFormCustomSelectPref">Preference</label>
-    <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
-      <option selected>Choose...</option>
-      <option value="1">One</option>
-      <option value="2">Two</option>
-      <option value="3">Three</option>
-    </select>
-
-    <div class="custom-control custom-checkbox my-1 mr-sm-2">
-      <input
-        type="checkbox"
-        class="custom-control-input"
-        id="customControlInline"
-      />
-      <label class="custom-control-label" for="customControlInline"
-        >Remember my preference</label
-      >
-    </div>
-
-    <button type="submit" class="btn btn-primary my-1">Submit</button>
-  </form>
-
-  <select class="custom-select">
+  <select class="custom-select" id="mySelect">
     <option selected>Open this select menu</option>
-    <option value="1">One</option>
-    <option value="2">Two</option>
-    <option value="3">Three</option>
+    <option value="1">Huffing Post</option>
+    <option value="2">Times of India</option>
+    <option value="3">BBC News</option>
+    <option value="4">Entertainment news</option>
   </select>
+  <button onclick="sendSelectValue()">Select</button>
 </main>
+<script>
+  function sendSelectValue() {
+    var selectElement = document.getElementById("mySelect");
+    var selectedValue =
+      selectElement.options[selectElement.selectedIndex].value;
 
+    var xhr = new XMLHttpRequest();
+    xhr.open("POST", "/my-endpoint");
+    xhr.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
+    xhr.send(JSON.stringify({ selectedValue: selectedValue }));
+  }
+</script>
 {% endblock %}
