--- a/templates/sarc_detector.html
+++ b/templates/sarc_detector.html
@@ -1,7 +1,6 @@
 {% extends 'layout.html' %} {% block content %}
 <main>
-  <h2>This is sarcasm Detectior page</h2>
-  <form method="POST" action="{{ url_for('prediction') }}" style="justify-content: center;">
+  <form method="POST" action="{{ url_for('prediction') }}" style="justify-content: center;" class="txtarea1">
     <div class="form-group">
       <label for="text">Enter your text:</label>
       <textarea class="form-control" id="text" name="text" rows="3"></textarea>
